--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -197,7 +197,11 @@
         "class MLP():\n",
         "    def __init__(self, N, sigma=10):\n",
         "        '''\n",
-        "        N: array of numbers of neurons in the input layer, each hiden layer and the output layer\n",
+        "        N: array of numbers of neurons in the input layer,\n",
+        "        each hiden layer and the output layer\n",
+        "\n",
+        "        For example if our data is 10 dimentional, we need two hidden layers\n",
+        "        with 5 neurons, and we have 2 classes, than N = [10, 5, 5, 2]\n",
         "        '''\n",
         "        self.rho = 1e-4\n",
         "        self.layers = [\n",
