--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "pVr8xutkYIIa"
       },
@@ -40,9 +40,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "knMQBMFQQv6i",
-        "outputId": "dfd32728-13c8-486c-8474-b6cb1aed65d3"
+        "outputId": "66e5a465-4afb-4b6b-af84-22de492c3b9e"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "2rNmOybSYI_c"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": 30,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": 31,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -212,6 +212,7 @@
         "            ) for i in range(len(N) - 1)\n",
         "        ]\n",
         "        self.layers[-1].activation = Softmax()\n",
+        "        self.accuracy = None\n",
         "\n",
         "\n",
         "    def assign_w(self, w):\n",
@@ -275,51 +276,45 @@
         "        w0 = self.get_flat('w')\n",
         "        message = minimize(fun=fun, jac=jac, x0=w0, method=method)\n",
         "        self.assign_w(message.x)\n",
-        "        return message\n"
+        "        return message\n",
+        "\n",
+        "\n",
+        "    def score(self, X, y, threshold=0.5):\n",
+        "        p = self.predict(X)\n",
+        "        self.accuracy = ((p > 0.5) == y).mean(axis=0)[0]\n",
+        "        return self.accuracy\n"
       ],
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 45,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "model = MLP([16, 4, 2])\n",
-        "model.fit(X, y)"
+        "model.fit(X, y)\n",
+        "model.score(X, y)"
       ],
       "metadata": {
         "id": "ZDkootvdLpoI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "856d1b7b-26df-474e-dfe6-ff40629c0a41"
+        "outputId": "42d14c87-13d8-42fd-9a49-26d4fab95bf0"
       },
-      "execution_count": 44,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "  message: Optimization terminated successfully.\n",
-              "  success: True\n",
-              "   status: 0\n",
-              "      fun: 0.02532572972041921\n",
-              "        x: [-3.078e-01  1.303e+00 ... -3.598e+00 -3.400e+00]\n",
-              "      nit: 596\n",
-              "      jac: [-6.436e-07 -2.059e-06 ...  3.056e-07 -2.191e-06]\n",
-              " hess_inv: [[ 7.447e+01 -3.102e+01 ... -2.826e+01 -1.872e+01]\n",
-              "            [-3.102e+01  6.284e+02 ... -8.558e+01  7.001e+01]\n",
-              "            ...\n",
-              "            [-2.826e+01 -8.558e+01 ...  7.294e+02  2.401e+02]\n",
-              "            [-1.872e+01  7.001e+01 ...  2.401e+02  6.058e+02]]\n",
-              "     nfev: 616\n",
-              "     njev: 616"
+              "1.0"
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 26
         }
       ]
     },
@@ -327,7 +322,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_cfCqUyC_hwW"
+        "id": "_PIrg8iTQvMV"
       },
       "execution_count": null,
       "outputs": []
