--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "pVr8xutkYIIa"
       },
@@ -32,36 +32,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "url = 'https://raw.githubusercontent.com/DavGev/OMDS_project/master/data.txt'\n",
+        "data = pd.read_csv(url)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "knMQBMFQQv6i",
-        "outputId": "66e5a465-4afb-4b6b-af84-22de492c3b9e"
+        "id": "AAGkp70_w7OE"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = pd.read_csv('/content/drive/MyDrive/Մագիստրատուրա/2 Semester/OM/Project/data.txt')"
-      ],
-      "metadata": {
-        "id": "2rNmOybSYI_c"
-      },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -74,7 +51,7 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -152,7 +129,7 @@
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -188,7 +165,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -287,7 +264,7 @@
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -302,9 +279,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42d14c87-13d8-42fd-9a49-26d4fab95bf0"
+        "outputId": "ddf8196b-26fa-46bf-a9ce-1ba06e88f397"
       },
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 17
         }
       ]
     },
@@ -322,7 +299,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_PIrg8iTQvMV"
+        "id": "C0obpZMbygmC"
       },
       "execution_count": null,
       "outputs": []
