--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -1733,7 +1733,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "pVr8xutkYIIa",
-        "outputId": "59a3791e-831f-49c1-e196-ab143fd8dd21",
+        "outputId": "525fbe46-fb95-4825-9a22-5a16ca87056f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1779,7 +1779,7 @@
       ],
       "metadata": {
         "id": "jN4uQ6KpWy7i",
-        "outputId": "67bc0413-f783-4bde-b178-0275fd10fb1f",
+        "outputId": "ff5b5456-dda2-42e4-9379-fd34c34b4a3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1798,9 +1798,9 @@
     {
       "cell_type": "code",
       "source": [
-        "X = data.loc[data.Y.isin(['D', 'G']), data.columns != 'Y']\n",
-        "y = data.loc[data.Y.isin(['D', 'G']), 'Y']\n",
-        "y = pd.get_dummies(y)\n",
+        "X = data.loc[data.Y.isin(['A', 'G']), data.columns != 'Y']\n",
+        "y = data.loc[data.Y.isin(['A', 'G']), 'Y']\n",
+        "y = pd.get_dummies(y)['G']\n",
         "\n",
         "X = X.to_numpy()\n",
         "y = y.to_numpy()\n"
@@ -1808,7 +1808,7 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1848,34 +1848,26 @@
     {
       "cell_type": "code",
       "source": [
-        "class Softmax:\n",
-        "    def __init__(self):\n",
-        "        self.name = 'Softmax'\n",
-        "\n",
+        "class Sigmoid:\n",
         "    def __call__(self, x):\n",
-        "        return np.exp(x) / np.exp(x).sum(axis=1)[:, None]\n",
+        "        return 1 / (1 + np.exp(-x))\n",
         "\n",
         "    def grad(self, s_x):\n",
-        "        I = np.diag(np.ones(s_x.shape[1]))\n",
-        "        return s_x[:,None,:] * (I[None,:,:] - s_x[:,:,None])\n",
+        "        return s_x * (1 - s_x)\n",
         "\n",
         "\n",
         "class Tanh:\n",
         "    def __init__(self, sigma):\n",
-        "        self.name = 'Tanh'\n",
         "        self.sigma = sigma\n",
         "\n",
         "    def __call__(self, x):\n",
-        "        return np.tanh(x / self.sigma)\n",
+        "        return np.tanh(self.sigma * x)\n",
         "\n",
         "    def grad(self, th_x):\n",
-        "        return 1 / self.sigma * (1 - th_x ** 2)\n",
+        "        return self.sigma * (1 - th_x ** 2)\n",
         "\n",
         "\n",
         "class Linear:\n",
-        "    def __init__(self):\n",
-        "        self.name = 'Linear'\n",
-        "\n",
         "    def __call__(self, x):\n",
         "        return x\n",
         "\n",
@@ -1911,11 +1903,7 @@
         "\n",
         "\n",
         "    def Backward(self, grad_output):\n",
-        "        if self.activation.name == 'Softmax':\n",
-        "            grad_sum = self.activation.grad(self.output) * grad_output[:,:,None]\n",
-        "            grad_sum = grad_sum.sum(axis=1)\n",
-        "        else:\n",
-        "            grad_sum = self.activation.grad(self.output) * grad_output\n",
+        "        grad_sum = self.activation.grad(self.output) * grad_output\n",
         "        self.grad_w = grad_sum.T @ self.input\n",
         "        self.grad_input = grad_sum @ self.w[:,1:]\n"
       ],
@@ -1945,7 +1933,7 @@
         "                activation = Tanh(sigma)\n",
         "            ) for i in range(len(N) - 1)\n",
         "        ]\n",
-        "        self.layers[-1].activation = Softmax()\n",
+        "        self.layers[-1].activation = Sigmoid()\n",
         "\n",
         "\n",
         "    def assign_w(self, w):\n",
@@ -1976,17 +1964,17 @@
         "\n",
         "\n",
         "    def error(self, X, y):\n",
-        "        y = np.asarray(y)\n",
+        "        y = y.reshape([-1, 1])\n",
         "        p = self.predict(X)\n",
-        "        error = - (y * np.log(p)).sum(axis=1).mean()\n",
+        "        error = - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
         "        error += self.rho * (self.get_flat('w') ** 2).sum()\n",
         "        return error\n",
         "\n",
         "\n",
         "    def gradient(self, X, y):\n",
-        "        y = np.asarray(y)\n",
+        "        y = y.reshape([-1, 1])\n",
         "        p = self.predict(X)\n",
-        "        grad_output = - (y / p) / X.shape[0]\n",
+        "        grad_output = - (y / p - (1-y) / (1-p)) / X.shape[0]\n",
         "        for layer in self.layers[::-1]:\n",
         "            layer.Backward(grad_output)\n",
         "            grad_output = layer.grad_input\n",
@@ -2014,7 +2002,7 @@
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -2034,7 +2022,7 @@
       "metadata": {
         "id": "Ktd-rJXvWiJY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2042,13 +2030,13 @@
       "source": [
         "models_data = []\n",
         "for N_layers in tqdm(range(5)):\n",
-        "    for N_neurons in tqdm(range(1, 17) if N_layers != 0 else range(1)):\n",
-        "        N = [16] + [N_neurons] * N_layers + [2]\n",
+        "    for N_neurons in tqdm(range(4, 17, 4) if N_layers != 0 else range(1)):\n",
+        "        N = [16] + [N_neurons] * N_layers + [1]\n",
         "\n",
-        "        for log_sigma in tqdm(np.linspace(-2, 2 , 9)):\n",
+        "        for log_sigma in tqdm(range(-2, 3)):\n",
         "            sigma = 10 ** log_sigma\n",
         "\n",
-        "            kf = KFold(n_splits=10, shuffle=True)\n",
+        "            kf = KFold(n_splits=5, shuffle=True)\n",
         "            kf.get_n_splits(X_train_val)\n",
         "\n",
         "            for train_index, valid_index in kf.split(X_train_val):\n",
@@ -2214,9 +2202,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(list(range(-2, 3)))"
+      ],
+      "metadata": {
+        "id": "C0obpZMbygmC",
+        "outputId": "35e85ffb-57df-49b7-f691-b60030374933",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-2, -1, 0, 1, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "C0obpZMbygmC"
+        "id": "DmL1DoipPk6s"
       },
       "execution_count": null,
       "outputs": []
