minimization method chosen

--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -1850,7 +1850,7 @@
       "source": [
         "class Sigmoid:\n",
         "    def __call__(self, x):\n",
-        "        return 1 / (1 + np.exp(-x))\n",
+        "        return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
         "\n",
         "    def grad(self, s_x):\n",
         "        return s_x * (1 - s_x)\n",
@@ -1864,21 +1864,12 @@
         "        return np.tanh(self.sigma * x)\n",
         "\n",
         "    def grad(self, th_x):\n",
-        "        return self.sigma * (1 - th_x ** 2)\n",
-        "\n",
-        "\n",
-        "class Linear:\n",
-        "    def __call__(self, x):\n",
-        "        return x\n",
-        "\n",
-        "    def grad(self, x):\n",
-        "        return 1\n",
-        "\n"
+        "        return self.sigma * (1 - th_x ** 2)\n"
       ],
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": 5,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -1910,7 +1901,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": 6,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -1938,7 +1929,7 @@
         "\n",
         "    def assign_w(self, w):\n",
         "        '''\n",
-        "        w: 1d array of all the weights\n",
+        "        w: flattened array of all the weights\n",
         "        '''\n",
         "        start = 0\n",
         "        end = 0\n",
@@ -1956,7 +1947,7 @@
         "\n",
         "\n",
         "    def predict(self, X):\n",
-        "        ipnut = np.asarray(X)\n",
+        "        ipnut = X\n",
         "        for layer in self.layers:\n",
         "            layer.Forward(ipnut)\n",
         "            ipnut = layer.output\n",
@@ -1984,7 +1975,7 @@
         "        return grad\n",
         "\n",
         "\n",
-        "    def fit(self, X, y, method='BFGS'):\n",
+        "    def fit(self, X, y, method='TNC'):\n",
         "\n",
         "        def fun(w):\n",
         "            self.assign_w(w)\n",
@@ -1997,12 +1988,60 @@
         "        w0 = self.get_flat('w')\n",
         "        message = minimize(fun=fun, jac=jac, x0=w0, method=method)\n",
         "        self.assign_w(message.x)\n",
-        "        return message\n"
+        "        return message\n",
+        "\n",
+        "\n",
+        "    def accuracy(self, X, y, threshold=0.5):\n",
+        "        y = y.reshape([-1, 1])\n",
+        "        p = self.predict(X)\n",
+        "        return ((p > threshold) == y).mean()\n"
       ],
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 14,
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Some observations on the minimization methods\n",
+        "\n",
+        "|method|speed|comment|\n",
+        "|-|-|-|\n",
+        "|`'Nelder-Mead'`|slow|stabile, accuracy = 0.505|\n",
+        "|`'Powell'`|very slow| accuracy > 0.93|\n",
+        "|`'CG'`|very slow|very unstabile, sometimes accuracy < 0.5|\n",
+        "|`'BFGS'`|fast| unstabile, sometimes accuracy = 0.505|\n",
+        "|`'Newton-CG'`|not too fast| quite stabile, mostly accuracy > 0.97|\n",
+        "|`'L-BFGS-B'`||just an error|\n",
+        "|`'TNC'`|very fast| quite stabile, mostly accuracy > 0.96|\n",
+        "|`'COBYLA'`|too fast| mostly accuracy = 0.505|\n",
+        "|`'SLSQP'`|lightning fast| accuracy = 0.505|\n",
+        "|`'trust-constr'`|not too fast| mostly accuracy > 0.995|\n",
+        "|`'dogleg'`||we need Hessian|\n",
+        "|`'trust-ncg'`||we need Hessian|\n",
+        "|`'trust-exact'`||we need Hessian|\n",
+        "|`'trust-krylov'`||we need Hessian|\n",
+        "\n",
+        "After consideration, I chose `'TNC'` to be the default method of minimization"
+      ],
+      "metadata": {
+        "id": "X79sLmu9WlxF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(20):\n",
+        "    model = MLP([16, 2, 1])\n",
+        "    model.fit(X, y, 'trust-constr')\n",
+        "    print(f'{i}: {model.accuracy(X, y)}')"
+      ],
+      "metadata": {
+        "id": "A846AuJJNw4g"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2050,14 +2089,16 @@
         "\n",
         "                X_train_scaled = scaler.fit_transform(X_train)\n",
         "                model.fit(X_train_scaled, y_train)\n",
+        "                train_error = model.error(X_train_scaled, y_train)\n",
         "\n",
         "                X_val_scaled = scaler.transform(X_val)\n",
-        "                error = model.error(X_val_scaled, y_val)\n",
+        "                val_error = model.error(X_val_scaled, y_val)\n",
         "\n",
         "                models_data.append({'N_layers': N_layers,\n",
         "                                    'N_neurons': N_neurons,\n",
         "                                    'sigma': sigma,\n",
-        "                                    'error': error})\n",
+        "                                    'train_error': train_error,\n",
+        "                                    'val_error': val_error})\n",
         "\n",
         "                pd.DataFrame(models_data).to_csv('/content/drive/MyDrive/Colab Notebooks/models_data.csv')"
       ],
@@ -2207,10 +2248,10 @@
       ],
       "metadata": {
         "id": "C0obpZMbygmC",
-        "outputId": "35e85ffb-57df-49b7-f691-b60030374933",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35e85ffb-57df-49b7-f691-b60030374933"
       },
       "execution_count": 24,
       "outputs": [
