--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -7202,10 +7202,10 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "pVr8xutkYIIa",
-        "outputId": "73064e65-bd33-477a-cec2-9175ec467a45",
+        "outputId": "0c5f8ffd-7555-40fe-d70e-49aae1139569",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7215,7 +7215,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-1-38939910a397>:5: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "<ipython-input-5-38939910a397>:5: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
             "  from tqdm.autonotebook import tqdm\n"
           ]
         }
@@ -7251,7 +7251,7 @@
       ],
       "metadata": {
         "id": "jN4uQ6KpWy7i",
-        "outputId": "220ee15a-4009-4a03-a030-2803ecf27aa6",
+        "outputId": "f82b31a4-61f4-4699-dd16-420f14599f1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7341,7 +7341,7 @@
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7373,7 +7373,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7471,7 +7471,7 @@
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7520,7 +7520,7 @@
       "metadata": {
         "id": "Ktd-rJXvWiJY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7804,7 +7804,7 @@
         },
         "outputId": "e36dc06e-434d-4829-ed97-39abced01fb3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -8268,7 +8268,7 @@
         },
         "outputId": "853ba1c7-ee62-472e-c5ed-e41564f49b4d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8502,7 +8502,7 @@
       "metadata": {
         "id": "kDCwqCe0nqGA"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8518,7 +8518,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8538,10 +8538,62 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# RBF\n",
+        "\n",
+        "**Question 2. (grade up to 10)** Develop an RBF neural network trained by implementing the decomposition method studied in class."
+      ],
+      "metadata": {
+        "id": "rGW3ywZzDNQ5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Gaussian():\n",
+        "    def __init__(self, sigma):\n",
+        "        self.sigma_sqr = sigma ** 2\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        return np.exp(- x ** 2 / self.sigma_sqr)\n",
+        "\n",
+        "    def derivative(self, x):\n",
+        "        return - 2 * x / self.sigma_sqr * self.__call__(x)\n",
+        "\n",
+        "\n",
+        "class Multiquadric():\n",
+        "    def __init__(self, sigma):\n",
+        "        self.sigma_sqr = sigma ** 2\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        return (x ** 2 + self.sigma_sqr) ** 0.5\n",
+        "\n",
+        "    def derivative(self, x):\n",
+        "        return x / self.__call__(x)\n",
+        "\n",
+        "\n",
+        "class InverseMultiquadric():\n",
+        "    def __init__(self, sigma):\n",
+        "        self.sigma_sqr = sigma ** 2\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        return (x ** 2 + self.sigma_sqr) ** -0.5\n",
+        "\n",
+        "    def derivative(self, x):\n",
+        "        return - x * self.__call__(x) ** 3\n"
+      ],
+      "metadata": {
+        "id": "wOexZZQD0XBj"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wOexZZQD0XBj"
+        "id": "pJC-iVWTm8T7"
       },
       "execution_count": null,
       "outputs": []
