RBF network init

--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -7349,7 +7349,7 @@
       "source": [
         "class MLPLayer():\n",
         "    def __init__(self, input_size, output_size, activation):\n",
-        "        self.w = np.random.random((output_size, input_size)) * 0.01\n",
+        "        self.w = np.random.random((output_size, input_size))\n",
         "        self.w /= (self.w ** 2).sum() ** 0.5\n",
         "        self.activation = activation\n",
         "\n",
@@ -8591,7 +8591,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class RBF_network():\n",
+        "    def __init__(self, RBF, sigma, N):\n",
+        "        self.RBF = RBF(sigma)\n",
+        "        self.w = np.random.random(N)\n",
+        "        self.c = np.random.random(N)\n",
+        "        self.w /= (self.w ** 2).sum() ** 0.5\n",
+        "        self.w /= (self.c ** 2).sum() ** 0.5\n",
+        ""
+      ],
       "metadata": {
         "id": "pJC-iVWTm8T7"
       },
