--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -8593,16 +8593,38 @@
       "cell_type": "code",
       "source": [
         "class RBF_network():\n",
-        "    def __init__(self, RBF, sigma, N):\n",
+        "    '''\n",
+        "        N: array of numbers of neurons in the input layer,\n",
+        "        each hiden layer and the output layer\n",
+        "\n",
+        "        For example if our data is 10 dimentional, we need two hidden layers\n",
+        "        with 5 neurons, and we have 2 classes, than N = [10, 5, 5, 2]\n",
+        "    '''\n",
+        "    def __init__(self, input_size, N, RBF, sigma=0):\n",
         "        self.RBF = RBF(sigma)\n",
         "        self.w = np.random.random(N)\n",
-        "        self.c = np.random.random(N)\n",
+        "        self.c = np.random.random([N, input_size])\n",
         "        self.w /= (self.w ** 2).sum() ** 0.5\n",
         "        self.w /= (self.c ** 2).sum() ** 0.5\n",
+        "        self.sigmoid = Sigmoid()\n",
+        "\n",
+        "\n",
+        "    def predict(self, X):\n",
+        "        Phi = self.RBF(((X[:, None, :] - self.c[None, :, :])**2).sum(axis=-1) ** 0.5)\n",
+        "        return self.sigmoid(Phi @ self.w)\n",
         ""
       ],
       "metadata": {
         "id": "pJC-iVWTm8T7"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "40gPqxgQuRpJ"
       },
       "execution_count": null,
       "outputs": []
