--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -8593,17 +8593,10 @@
       "cell_type": "code",
       "source": [
         "class RBF_network():\n",
-        "    '''\n",
-        "        N: array of numbers of neurons in the input layer,\n",
-        "        each hiden layer and the output layer\n",
-        "\n",
-        "        For example if our data is 10 dimentional, we need two hidden layers\n",
-        "        with 5 neurons, and we have 2 classes, than N = [10, 5, 5, 2]\n",
-        "    '''\n",
-        "    def __init__(self, input_size, N, RBF, sigma=0, rho=1e-4):\n",
+        "    def __init__(self, input_size, N_centers, RBF, sigma=0, rho=1e-4):\n",
         "        self.RBF = RBF(sigma)\n",
-        "        self.w = np.random.random(N)\n",
-        "        self.c = np.random.random([N, input_size])\n",
+        "        self.w = np.random.random(N_centers)\n",
+        "        self.c = np.random.random([N_centers, input_size])\n",
         "        self.w /= (self.w ** 2).sum() ** 0.5\n",
         "        self.w /= (self.c ** 2).sum() ** 0.5\n",
         "        self.sigmoid = Sigmoid()\n",
@@ -8611,7 +8604,9 @@
         "\n",
         "\n",
         "    def predict(self, X):\n",
-        "        Phi = self.RBF(((X[:, None, :] - self.c[None, :, :])**2).sum(axis=-1) ** 0.5)\n",
+        "        Phi = X[:, None, :] - self.c[None, :, :]\n",
+        "        Phi = (Phi **2).sum(axis=-1) ** 0.5\n",
+        "        Phi = self.RBF(Phi)\n",
         "        return self.sigmoid(Phi @ self.w)\n",
         "\n",
         "\n",
@@ -8619,7 +8614,7 @@
         "        p = self.predict(X)\n",
         "        error = - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
         "        error += self.rho * (self.w ** 2).sum()\n",
-        "        return error"
+        "        return error\n"
       ],
       "metadata": {
         "id": "pJC-iVWTm8T7"
