--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -7202,10 +7202,10 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "pVr8xutkYIIa",
-        "outputId": "0c5f8ffd-7555-40fe-d70e-49aae1139569",
+        "outputId": "8d035635-cce1-4b0c-ebd6-6ede3ede8caa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7215,7 +7215,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-5-38939910a397>:5: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "<ipython-input-1-38939910a397>:5: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
             "  from tqdm.autonotebook import tqdm\n"
           ]
         }
@@ -7251,7 +7251,7 @@
       ],
       "metadata": {
         "id": "jN4uQ6KpWy7i",
-        "outputId": "f82b31a4-61f4-4699-dd16-420f14599f1e",
+        "outputId": "a2952729-778c-403d-9667-5856ade779f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7526,6 +7526,8 @@
     {
       "cell_type": "code",
       "source": [
+        "np.seterr(divide='ignore', invalid='ignore')\n",
+        "\n",
         "models_data = []\n",
         "for N_layers in tqdm(range(5)):\n",
         "    for N_neurons in tqdm(range(4, 17, 4) if N_layers != 0 else range(1)):\n",
@@ -7559,7 +7561,9 @@
         "                                    'train_error': train_error,\n",
         "                                    'val_error': val_error})\n",
         "\n",
-        "                pd.DataFrame(models_data).to_csv('/content/drive/MyDrive/Colab Notebooks/models_data.csv')"
+        "                pd.DataFrame(models_data).to_csv('/content/drive/MyDrive/Colab Notebooks/models_data.csv')\n",
+        "\n",
+        "# np.seterr(divide='warn', invalid='warn')"
       ],
       "metadata": {
         "id": "ZDkootvdLpoI",
@@ -8540,7 +8544,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# RBF\n",
+        "# Radial Basis Function (RBF) Network\n",
         "\n",
         "**Question 2. (grade up to 10)** Develop an RBF neural network trained by implementing the decomposition method studied in class."
       ],
@@ -8553,21 +8557,21 @@
       "source": [
         "class Gaussian():\n",
         "    def __init__(self, sigma):\n",
-        "        self.sigma_sqr = sigma ** 2\n",
+        "        self.sigma = sigma\n",
         "\n",
         "    def __call__(self, x):\n",
-        "        return np.exp(- x ** 2 / self.sigma_sqr)\n",
+        "        return np.exp(- x ** 2 / self.sigma ** 2)\n",
         "\n",
         "    def derivative(self, x):\n",
-        "        return - 2 * x / self.sigma_sqr * self.__call__(x)\n",
+        "        return - 2 * x / self.sigma ** 2 * self.__call__(x)\n",
         "\n",
         "\n",
         "class Multiquadric():\n",
         "    def __init__(self, sigma):\n",
-        "        self.sigma_sqr = sigma ** 2\n",
+        "        self.sigma = sigma\n",
         "\n",
         "    def __call__(self, x):\n",
-        "        return (x ** 2 + self.sigma_sqr) ** 0.5\n",
+        "        return (x ** 2 + self.sigma ** 2) ** 0.5\n",
         "\n",
         "    def derivative(self, x):\n",
         "        return x / self.__call__(x)\n",
@@ -8575,10 +8579,10 @@
         "\n",
         "class InverseMultiquadric():\n",
         "    def __init__(self, sigma):\n",
-        "        self.sigma_sqr = sigma ** 2\n",
+        "        self.sigma = sigma\n",
         "\n",
         "    def __call__(self, x):\n",
-        "        return (x ** 2 + self.sigma_sqr) ** -0.5\n",
+        "        return (x ** 2 + self.sigma ** 2) ** -0.5\n",
         "\n",
         "    def derivative(self, x):\n",
         "        return - x * self.__call__(x) ** 3\n"
@@ -8586,7 +8590,7 @@
       "metadata": {
         "id": "wOexZZQD0XBj"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8598,7 +8602,7 @@
         "        self.w = np.random.random(N_centers)\n",
         "        self.c = np.random.random([N_centers, input_size])\n",
         "        self.w /= (self.w ** 2).sum() ** 0.5\n",
-        "        self.w /= (self.c ** 2).sum() ** 0.5\n",
+        "        self.c /= (self.c ** 2).sum() ** 0.5\n",
         "        self.sigmoid = Sigmoid()\n",
         "        self.rho\n",
         "\n",
@@ -8619,7 +8623,7 @@
       "metadata": {
         "id": "pJC-iVWTm8T7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
