--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -7202,7 +7202,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "pVr8xutkYIIa",
         "outputId": "8d035635-cce1-4b0c-ebd6-6ede3ede8caa",
@@ -7240,7 +7240,7 @@
       "metadata": {
         "id": "AAGkp70_w7OE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7256,7 +7256,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7280,7 +7280,44 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Sigmoid:\n",
+        "    def __call__(self, x):\n",
+        "        return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
+        "\n",
+        "    def grad(self, s_x):\n",
+        "        return s_x * (1 - s_x)\n",
+        "\n",
+        "\n",
+        "class Tanh:\n",
+        "    def __init__(self, sigma):\n",
+        "        self.sigma = sigma\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        return np.tanh(self.sigma * x)\n",
+        "\n",
+        "    def grad(self, th_x):\n",
+        "        return self.sigma * (1 - th_x ** 2)\n",
+        "\n",
+        "\n",
+        "class CrossEntropy:\n",
+        "    def __call__(self, y, p):\n",
+        "        return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
+        "\n",
+        "    def grad(self, y, p):\n",
+        "        return - (y / p - (1-y) / (1-p)) / y.shape[0]\n",
+        "\n",
+        "cross_entropy = CrossEntropy()\n"
+      ],
+      "metadata": {
+        "id": "Tv-lzmtbFykI"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7316,33 +7353,6 @@
       "metadata": {
         "id": "VmS9yyaImy0S"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Sigmoid:\n",
-        "    def __call__(self, x):\n",
-        "        return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
-        "\n",
-        "    def grad(self, s_x):\n",
-        "        return s_x * (1 - s_x)\n",
-        "\n",
-        "\n",
-        "class Tanh:\n",
-        "    def __init__(self, sigma):\n",
-        "        self.sigma = sigma\n",
-        "\n",
-        "    def __call__(self, x):\n",
-        "        return np.tanh(self.sigma * x)\n",
-        "\n",
-        "    def grad(self, th_x):\n",
-        "        return self.sigma * (1 - th_x ** 2)\n"
-      ],
-      "metadata": {
-        "id": "Tv-lzmtbFykI"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -7429,7 +7439,7 @@
         "    def error(self, X, y):\n",
         "        y = y.reshape([-1, 1])\n",
         "        p = self.predict(X)\n",
-        "        error = - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
+        "        error = cross_entropy(y, p)\n",
         "        error += self.rho * (self.get_flat('w') ** 2).sum()\n",
         "        return error\n",
         "\n",
@@ -7437,7 +7447,7 @@
         "    def gradient(self, X, y):\n",
         "        y = y.reshape([-1, 1])\n",
         "        p = self.predict(X)\n",
-        "        grad_output = - (y / p - (1-y) / (1-p)) / X.shape[0]\n",
+        "        grad_output = cross_entropy.grad(y, p)\n",
         "        for layer in self.layers[::-1]:\n",
         "            layer.Backward(grad_output)\n",
         "            grad_output = layer.grad_input\n",
@@ -8597,28 +8607,71 @@
       "cell_type": "code",
       "source": [
         "class RBF_network():\n",
-        "    def __init__(self, input_size, N_centers, RBF, sigma=0, rho=1e-4):\n",
+        "    def __init__(self, input_size, N_centers, RBF, sigma=1, rho=1e-4):\n",
         "        self.RBF = RBF(sigma)\n",
         "        self.w = np.random.random(N_centers)\n",
-        "        self.c = np.random.random([N_centers, input_size])\n",
         "        self.w /= (self.w ** 2).sum() ** 0.5\n",
-        "        self.c /= (self.c ** 2).sum() ** 0.5\n",
+        "        self.c = np.random.random([N_centers, input_size])\n",
+        "        self.c *= sigma / (self.c ** 2).sum() ** 0.5\n",
         "        self.sigmoid = Sigmoid()\n",
-        "        self.rho\n",
+        "        self.rho = rho\n",
+        "\n",
+        "        self.dist = None\n",
+        "        self.norm = None\n",
+        "        self.Phi = None\n",
         "\n",
         "\n",
         "    def predict(self, X):\n",
-        "        Phi = X[:, None, :] - self.c[None, :, :]\n",
-        "        Phi = (Phi **2).sum(axis=-1) ** 0.5\n",
-        "        Phi = self.RBF(Phi)\n",
-        "        return self.sigmoid(Phi @ self.w)\n",
+        "        self.dist = self.c[None, :, :] - X[:, None, :]\n",
+        "        self.norm = (self.dist ** 2).sum(axis=-1) ** 0.5\n",
+        "        self.Phi = self.RBF(self.norm)\n",
+        "        return self.sigmoid(self.Phi @ self.w)\n",
         "\n",
         "\n",
         "    def error(self, X, y):\n",
         "        p = self.predict(X)\n",
-        "        error = - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
+        "        error = cross_entropy(y, p)\n",
         "        error += self.rho * (self.w ** 2).sum()\n",
-        "        return error\n"
+        "        return error\n",
+        "\n",
+        "\n",
+        "    def grad_w(self, X, y):\n",
+        "        p = self.predict(X)\n",
+        "        grad = cross_entropy.grad(y, p)\n",
+        "        grad *= self.sigmoid.grad(p)\n",
+        "        grad = grad @ self.Phi\n",
+        "        return grad\n",
+        "\n",
+        "\n",
+        "    def grad_c(self, X, y):\n",
+        "        p = self.predict(X)\n",
+        "        grad = cross_entropy.grad(y, p)[:, None] * self.w[None, :]\n",
+        "        grad *= self.RBF.derivative(self.norm)\n",
+        "        grad = grad[:, :, None] * self.dist / self.norm[:, :, None]\n",
+        "        return grad.sum(axis=0)\n",
+        "\n",
+        "\n",
+        "    def fit(self, X, y, method='trust-constr'):\n",
+        "        while (self.grad_w(X, y)**2).sum() + (self.grad_c(X, y)**2).sum() > 1e-3:\n",
+        "            def fun_w(w):\n",
+        "                self.w = w\n",
+        "                return self.error(X, y)\n",
+        "            def jac_w(w):\n",
+        "                self.w = w\n",
+        "                return self.grad_w(X, y)\n",
+        "\n",
+        "            message = minimize(fun=fun_w, jac=jac_w, x0=self.w, method=method)\n",
+        "            self.w = message.x\n",
+        "\n",
+        "            def fun_c(c):\n",
+        "                self.c = c.reshape(self.c.shape)\n",
+        "                return self.error(X, y)\n",
+        "            def jac_c(c):\n",
+        "                self.c = c.reshape(self.c.shape)\n",
+        "                return self.grad_c(X, y).flatten()\n",
+        "\n",
+        "            message = minimize(fun=fun_c, jac=jac_c, x0=self.c.flatten(), method=method)\n",
+        "            self.c = message.x.reshape(self.c.shape)\n"
       ],
       "metadata": {
         "id": "pJC-iVWTm8T7"
@@ -8628,9 +8681,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "model = RBF_network(input_size=16, N_centers=4, RBF=Gaussian, sigma=12)"
+      ],
       "metadata": {
         "id": "40gPqxgQuRpJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(X, y)"
+      ],
+      "metadata": {
+        "id": "LjySujvTsLBT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QOQPb-d_sOfF"
       },
       "execution_count": null,
       "outputs": []
