--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -3,7 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "NSZ4NIOn1CSm"
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -7201,14 +7205,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DavGev/OMDS_project/blob/master/omdsProect.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pVr8xutkYIIa",
-        "outputId": "8d035635-cce1-4b0c-ebd6-6ede3ede8caa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb1f04cc-f44a-4902-f046-aa18f04470a6"
       },
       "outputs": [
         {
@@ -7240,7 +7254,7 @@
       "metadata": {
         "id": "AAGkp70_w7OE"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -7251,12 +7265,12 @@
       ],
       "metadata": {
         "id": "jN4uQ6KpWy7i",
-        "outputId": "a2952729-778c-403d-9667-5856ade779f1",
+        "outputId": "3fdd260e-5e48-4437-e179-3fa4cda48429",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -7280,7 +7294,7 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -7317,14 +7331,21 @@
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# PART 1 - MLP\n",
-        "\n",
+        "# Multi-Layer Preceptron (MLP)"
+      ],
+      "metadata": {
+        "id": "NSZ4NIOn1CSm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "- $ E(ω;π) = - \\frac{1}{P} ∑_{i=1}^P {[y_i \\ln(p_i) + (1 - y_i) \\ln(1 - p_i)]} + ρ \\|ω\\|^2 $\n",
         "- $ ρ = 10^{−4} $\n",
         "- $ S(v)_j = \\frac{e^{v_j}}{∑_{h=1}^n e^{v_h}} $\n",
@@ -8554,12 +8575,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Radial Basis Function (RBF) Network\n",
-        "\n",
-        "**Question 2. (grade up to 10)** Develop an RBF neural network trained by implementing the decomposition method studied in class."
+        "# Radial Basis Function (RBF) Network"
       ],
       "metadata": {
         "id": "rGW3ywZzDNQ5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**Question 2. (grade up to 10)** Develop an RBF neural network trained by implementing the decomposition method studied in class.\n",
+        "\n",
+        "- Data. $c0 ∈ \\mathbb{R}^{nN}$ , $w_0 ∈ \\mathbb{R} ^ N$ , $k = 0$.\n",
+        "- While $∇E(w_k , c_k ) \\neq 0$\n",
+        "    - Step 1: Minimization w.r.t. $w$:\n",
+        "        - compute $w_{k+1} = \\arg \\min_w E(w, c_k)$ by solving the linear least square problem in $w$.\n",
+        "    - Step 2: Minimization w.r.t. $c$:\n",
+        "        1. compute $ d_k = ∇_ c E(w_{k+1}, c_k) $\n",
+        "        2. compute $η_k$ by means of a suitable linesearch (Armijo)\n",
+        "        3. choose $c_{k+1}$ such that $E(w_{k+1}, c_{k+1}) ≤ E(w_{k+1}, c_k + η_k d_k )$\n",
+        "    - Step 3: $k = k + 1$\n",
+        "- End"
+      ],
+      "metadata": {
+        "id": "x_7lyXH93sDg"
       }
     },
     {
@@ -8600,7 +8640,7 @@
       "metadata": {
         "id": "wOexZZQD0XBj"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -8676,7 +8716,7 @@
       "metadata": {
         "id": "pJC-iVWTm8T7"
       },
-      "execution_count": null,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -8685,9 +8725,9 @@
         "model = RBF_network(input_size=16, N_centers=4, RBF=Gaussian, sigma=12)"
       ],
       "metadata": {
-        "id": "40gPqxgQuRpJ"
+        "id": "X25kCC1kR_De"
       },
-      "execution_count": null,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -8696,16 +8736,16 @@
         "model.fit(X, y)"
       ],
       "metadata": {
-        "id": "LjySujvTsLBT"
+        "id": "g2ZSNpuQUj16"
       },
-      "execution_count": null,
+      "execution_count": 132,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QOQPb-d_sOfF"
+        "id": "VyQ2ApxewFeD"
       },
       "execution_count": null,
       "outputs": []
